app/weather/01-monolith-pod.yaml
# Monolith containing all app components including database
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: monolith
  name: monolith
spec:
  containers:
  - image: brainupgrade/weather:monolith
    name: monolith
  restartPolicy: Never
