app/weather/02a-monolith-deploy.yaml
# monolith
# scale up / down  kubectl scale --replicas=2 deploy weather
# autoscale  kubectl autoscale --min 2 --max 5 deploy weather   (metrics-server should be running in the cluster)
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: brainupgrade/weather:monolith
        name: weather
        ports:
        - containerPort: 8080
