app/weather/03b-microservices-app.yaml
# microservices components 1 - main app 2 - external db
# 1 - main app
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: brainupgrade/weather:microservices-app-db
        imagePullPolicy: Always
        name: weather
        ports:
        - containerPort: 8080
