app/weather/03-microservices-app-db.yaml
# microservices components 1 - main app 2 - external db
# 1 - main app
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - image: brainupgrade/weather:microservices-app-db
        imagePullPolicy: Always
        name: weather
        ports:
        - containerPort: 8080
---
# 2 - external db
apiVersion: v1
kind: Service
metadata:
  name: weather-db
spec:
  type: ClusterIP
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
  selector:
    app: weather-db
