app/weather/03a-microservices-db.yaml
# microservices components 1 - main app 2 - external db
# 2 - external db
apiVersion: v1
kind: Service
metadata:
  name: weather-db
spec:
  type: ClusterIP
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
  selector:
    app: weather-db
