app/weather/06b-microservices-weather-services.yaml
# 2 - weather services
apiVersion: v1
kind: Service
metadata:
  name: weather-services
  namespace: weather
spec:
  type: ClusterIP
  ports:
    - name: services
      port: 80
      targetPort: 8080
  selector:
    app: weather-services
---
# microservices components 2 - api services
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-services
  name: weather-services
  namespace: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-services
  template:
    metadata:
      labels:
        app: weather-services
    spec:
      containers:
        - image: brainupgrade/weather-services:2.0.0
          imagePullPolicy: Always
          name: weather-services
          ports:
            - containerPort: 8080
