app/weather/06c-microservices-weather-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-db
spec:
  type: ClusterIP
  ports:
    - name: mariadb
      port: 3306
      targetPort: 3306
  selector:
    app: weather-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-db
  template:
    metadata:
      labels:
        app: weather-db
    spec:
      nodeSelector:
        kops.k8s.io/instancegroup: "spotnodes"
      containers:
      - image: mariadb:10.3
        name: mariadb
        resources: 
          limits:
            cpu: 50m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 128Mi         
        ports:
        - containerPort: 3306
          name: mariadb
