app/weather/08d-metrics-weather-front.yaml
# microservices components 1 - front
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather
  name: weather-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
      tier: front
  template:
    metadata:
      labels:
        app: weather
        tier: front
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
        prometheus.io/path: /actuator/prometheus        
    spec:
      volumes: 
      - name: elastic-apm-agent 
        emptyDir: {}    
      containers:
        - image: brainupgrade/weather:metrics
          imagePullPolicy: Always
          name: weather-front
          resources:
            limits:
              cpu: 1
              memory: 2048Mi
            requests:
              cpu: 0.5
              memory: 1500Mi  
          volumeMounts: 
          - mountPath: /elastic/apm/agent 
            name: elastic-apm-agent          
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: weather-front
spec:
  type: ClusterIP
  ports:
    - name: app
      port: 80
      targetPort: 8080
  selector:
    app: weather
    tier: front
