app/weather/08e-metrics-weather-services.yaml
# 2 - weather services
apiVersion: v1
kind: Service
metadata:
  name: weather-services
  # namespace: weather
spec:
  type: ClusterIP
  ports:
    - name: services
      port: 80
      targetPort: 8080
  selector:
    app: weather
    tier: services
---
# microservices components 2 - api services
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-services
  name: weather-services
  # namespace: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather
      tier: services
  template:
    metadata:
      labels:
        app: weather
        tier: services
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
        prometheus.io/path: /actuator/prometheus        
    spec:
      volumes: 
      - name: elastic-apm-agent 
        emptyDir: {}    
      containers:
        - image: brainupgrade/weather-services:metrics
          imagePullPolicy: Always
          name: weather-services
          volumeMounts: 
          - mountPath: /elastic/apm/agent 
            name: elastic-apm-agent          
          ports:
            - containerPort: 8080
