app/weather/cross-ns-svc-ref.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  type: ExternalName
  externalName: weather-front.weather.svc.cluster.local
