app/weather/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: weather.brainupgrade.in
spec:
  rules:
  - host: weather.brainupgrade.in
    http:
      paths:
      - backend:
          service:
            name: weather-front
            port:
              number: 80
        path: /?(.*)
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - weather.brainupgrade.in
    secretName: weather.brainupgrade.in
